minor update in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <body>
 <section>
     <div class="container">
-        <p>News Board API</p>
+        <h1><a href="/api">News Board API</a></h1>
     </div>
 </section>
 </body>
